# kanji-tools

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  Doxyfile  DoxygenLayout.xml  LICENSE  README.md  jenkinsRunTests.sh
apps/: CMakeLists.txt  CmakeLists.txt  convertMain.cpp  formatMain.cpp  kanjiCountMain.cpp  kanjiMain.cpp  kanjiQuizMain.cpp  kanjiStatsMain.cpp  quizMain.cpp  statsMain.cpp
data/: .radicals.txt.swp  extra.txt  groups.txt  halfwidth-kana.txt  hiragana.txt  jinmei.txt  jouyou.txt  katakana.txt  linked-jinmei.txt  meaning-groups.txt  n1.txt  n2.txt  n5.txt  other-readings.txt  pattern-groups.txt  punctuation.txt  radicals.txt  strokes.txt  ucd.txt  wide-letters.txt  wiki-strokes.txt
data/jlpt/: n1.txt  n2.txt  n3.txt  n4.txt  n5.txt
data/jukugo/: g1.txt  g2.txt  g3.txt  g4.txt  g5.txt  g6.txt  other.txt
data/kentei/: k1.txt  k10.txt  k2.txt  k3.txt  k4.txt  k5.txt  k6.txt  k7.txt  k8.txt  k9.txt  kJ1.txt  kJ2.txt  kj1.txt  kj2.txt
docs/: KanaConversionChart.md
docs/diagrams/src/: Class_Kana.txt  Class_Kanji.txt  State_Utf8ToUtf32.txt
include/kanji/: Choice.h  Data.h  FileList.h  FileStats.h  Group.h  GroupData.h  Kana.h  KanaConvert.h  Kanji.h  KanjiCount.h  KanjiData.h  KanjiGroupData.h  KanjiQuiz.h  MBChar.h  MBUtils.h  Quiz.h  Radical.h  RadicalData.h  Table.h  Ucd.h  UcdData.h
include/kanji_tools/kana/: Kana.h  KanaConvert.h  MBChar.h  Table.h
include/kanji_tools/kanji/: CustomFileKanji.h  Data.h  FileKanji.h  JinmeiKanjiReasons.h  Kanji.h  KanjiData.h  KanjiGrades.h  KanjiTypes.h  LinkedKanji.h  NonLinkedKanji.h  OtherKanji.h  Radical.h  RadicalData.h  Ucd.h  UcdData.h  UcdFileKanji.h  UcdLinkTypes.h
include/kanji_tools/quiz/: Group.h  GroupData.h  GroupQuiz.h  Jukugo.h  JukugoData.h  ListQuiz.h  Quiz.h  QuizLauncher.h
include/kanji_tools/stats/: MBCount.h  Stats.h
include/kanji_tools/tests/: WhatMismatch.h
include/kanji_tools/utils/: Choice.h  ColumnFile.h  DataFile.h  DisplayLength.h  DisplaySize.h  EnumArray.h  EnumBitmask.h  EnumMap.h  EnumTraits.h  FileList.h  IterableEnum.h  JlptLevels.h  Kana.h  KanjiGrades.h  KanjiTypes.h  KenteiKyus.h  MBChar.h  MBUtils.h  Radical.h  Table.h  Ucd.h  UnicodeBlock.h
libs/: Doxyfile
libs/kana/src/: CMakeLists.txt  Choice.cpp  Converter.cpp  DisplaySize.cpp  Kana.cpp  KanaConvert.cpp  MBChar.cpp  Table.cpp  Utf8Char.cpp
libs/kanji/src/: CMakeLists.txt  CustomFileKanji.cpp  Data.cpp  FileKanjiData.cpp  KanjiData.cpp  KanjiListFile.cpp  LinkedKanji.cpp  ListFile.cpp  MorohashiId.cpp  NonLinkedKanji.cpp  OfficialKanji.cpp  Radical.cpp  RadicalData.cpp  RealKanjiData.cpp  Strokes.cpp  TextKanjiData.cpp  Ucd.cpp  UcdData.cpp  UcdFileKanji.cpp  kanji.cpp
libs/quiz/src/: CMakeLists.txt  Group.cpp  GroupData.cpp  GroupQuiz.cpp  Jukugo.cpp  JukugoData.cpp  ListQuiz.cpp  Quiz.cpp  QuizLauncher.cpp
libs/stats/src/: CMakeLists.txt  MBCount.cpp  Stats.cpp  Utf8Count.cpp
libs/utils/src/: Args.cpp  BlockRange.cpp  CMakeLists.txt  Choice.cpp  ColumnFile.cpp  DataFile.cpp  MBUtils.cpp  (+9 more)
scripts/: parseEastAsianWidth.sh  parseUcdAllFlat.sh  ucdDiff.sh
src/: CMakeLists.txt  Choice.cpp  Data.cpp  FileList.cpp  FileStats.cpp  GroupData.cpp  Kana.cpp  KanaConvert.cpp  KanjiCount.cpp  KanjiData.cpp  KanjiGroupData.cpp  KanjiQuiz.cpp  MBChar.cpp  Quiz.cpp  RadicalData.cpp  Table.cpp  Ucd.cpp  UcdData.cpp  kanji.cpp
src/kana/: CMakeLists.txt  Kana.cpp  KanaConvert.cpp  MBChar.cpp  Table.cpp
src/kanji/: CMakeLists.txt  CustomFileKanji.cpp  Data.cpp  FileKanji.cpp  KanjiData.cpp  NonLinkedKanji.cpp  OtherKanji.cpp  RadicalData.cpp  Ucd.cpp  UcdData.cpp  kanji.cpp
src/quiz/: CMakeLists.txt  GroupData.cpp  GroupQuiz.cpp  JukugoData.cpp  ListQuiz.cpp  Quiz.cpp  QuizLauncher.cpp
src/stats/: CMakeLists.txt  MBCount.cpp  Stats.cpp
src/utils/: CMakeLists.txt  Choice.cpp  ColumnFile.cpp  DataFile.cpp  FileList.cpp  Kana.cpp  MBChar.cpp  MBUtils.cpp  Table.cpp  Ucd.cpp
tests/: CMakeLists.txt  ChoiceTest.cpp  DataTest.cpp  FileListTest.cpp  FileStatsTest.cpp  GroupDataTest.cpp  KanaConvertTest.cpp  KanaTest.cpp  KanjiDataTest.cpp  KanjiQuizTest.cpp  KanjiTest.cpp  MBCharTest.cpp  MBUtilsTest.cpp  QuizTest.cpp  TableTest.cpp  testMain.cpp
tests/include/kt_tests/: MockKanjiData.h  TestKanji.h  TestKanjiData.h  TestUcd.h  Utils.h  WhatMismatch.h
tests/include/tests/kanji_tools/: MockData.h  MockKanjiData.h  TestData.h  TestKanji.h  TestKanjiData.h  TestUcd.h  WhatMismatch.h
tests/kana/: CMakeLists.txt  ChoiceTest.cpp  ConverterTest.cpp  DisplaySizeTest.cpp  KanaConvertTest.cpp  KanaEnumsTest.cpp  KanaTest.cpp  MBCharTest.cpp  TableTest.cpp  Utf8CharTest.cpp
tests/kanji/: CMakeLists.txt  CustomFileKanjiTest.cpp  DataTest.cpp  FileKanjiDataTest.cpp  JinmeiKanjiReasonsTest.cpp  JinmeiReasonsTest.cpp  JlptLevelsTest.cpp  KanjiDataTest.cpp  KanjiEnumsTest.cpp  KanjiGradesTest.cpp  KanjiListFileTest.cpp  KanjiTest.cpp  KanjiTypesTest.cpp  KenteiKyusTest.cpp  ListFileTest.cpp  MorohashiIdTest.cpp  OfficialKanjiTest.cpp  RadicalDataTest.cpp  RealKanjiDataTest.cpp  StrokesTest.cpp  TextKanjiDataTest.cpp  UcdDataTest.cpp  UcdLinkTypesTest.cpp  UcdTest.cpp
tests/quiz/: CMakeLists.txt  GroupDataTest.cpp  GroupQuizTest.cpp  GroupTest.cpp  JukugoDataTest.cpp  JukugoTest.cpp  ListQuizTest.cpp  QuizLauncherTest.cpp  QuizTest.cpp
tests/sample-data/books/: 01-こゝろ.txt  02-山椒大夫.txt  こゝろ.txt  山椒大夫.txt
tests/sample-data/wiki-articles/: 02-中島みゆき.txt  吉田拓郎.txt  雨月物語.txt
tests/stats/: CMakeLists.txt  MBCountTest.cpp  StatsTest.cpp  Utf8CountTest.cpp
tests/stats/sample-data/books/: 01-こゝろ.txt
tests/utils/: ArgsTest.cpp  BitmaskTest.cpp  BlockRangeTest.cpp  CMakeLists.txt  ChoiceTest.cpp  ColumnFileTest.cpp  DataFileTest.cpp  DisplayLengthTest.cpp  DisplaySizeTest.cpp  EnumArrayTest.cpp  EnumArrayWithNoneTest.cpp  EnumBitmaskTest.cpp  EnumListTest.cpp  EnumListWithNoneTest.cpp  EnumMapTest.cpp  ExceptionTest.cpp  FileListTest.cpp  JlptLevelsTest.cpp  KanaTest.cpp  KenteiKyusTest.cpp  MBCharTest.cpp  MBUtilsTest.cpp  StringTest.cpp  SymbolTest.cpp  TableTest.cpp  UnicodeBlockTest.cpp  Utf8Test.cpp  UtilsTest.cpp
(+122 files in other folders)
